# rustguac

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build-deb.sh  build-rpm.sh  build.rs  config.example.toml  dev.sh  haproxy.example.cfg  install-release.sh  install.sh  rustguac.spec
.github/workflows/: ci.yml  release.yml
debian/: conffiles  config.toml.default  control  copyright  postinst  postrm  preinst  rules  rustguac-guacd.service  rustguac.service
docs/: api.md  configuration.md  installation.md  integrations.md  netbox.md  overview.md  roles-and-access-control.md  security.md
fuzz/: Cargo.toml  FINDINGS.md
fuzz-guacd/: .gitignore  FINDINGS.md  build.sh  config.h  fuzz_parser.c
fuzz-guacd/guacamole/: socket.h
fuzz/fuzz_targets/: api_input.rs  protocol_stream.rs  vault_response.rs  websocket_message.rs
patches/: 001-freerdp3-debian13.patch  README.md
scripts/: drive-setup.sh
src/: api.rs  auth.rs  browser.rs  config.rs  db.rs  drive.rs  guacd.rs  main.rs  oidc.rs  protocol.rs  session.rs  tunnel.rs  vault.rs  websocket.rs
static/: 403.http  addressbook.html  admin.html  client.html  docs.html  index.html  recordings.html  sessions.html  tokens.html
static/guac/: SessionRecording.js
tests/: test_browser_session.sh
